[fix] fix detail word-wrap and some other bugs

--- a/browser/search/scss/style.scss
+++ b/browser/search/scss/style.scss
@@ -30,6 +30,9 @@ ul {
 .el-items {
   max-height: 360px;
   overflow-y: scroll;
+  overflow-x: hidden;
+  word-break: break-all;
+  word-wrap: break-word;
   &::-webkit-scrollbar {
     width: 5px;
     background-color: rgba(0, 0, 0, .06);
